--- a/jasmine-standalone-3.5.0/SpecRunner.html
+++ b/jasmine-standalone-3.5.0/SpecRunner.html
@@ -19,6 +19,7 @@
   <!-- include spec files here... -->
   <script src="spec/featureSpec.js"></script>
   <script src="spec/airportSpec.js"></script>
+  <script src="spec/planeSpec.js"></script>
 
 
 </head>
